@@ -1,6 +1,7 @@
 2008-11-27:
     Added Ibkg to the interdiff model (not implemented previously)
     Added revival of the FOM vs generations plot after loading of data.
+    Fixed bugs in the insertion of the layers.
 
 2008-11-26:
     Added documentation to the plugins.
